@startuml DataLabelingSupportSystem
!theme plain
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0

package "auth-service :8001" #dce8f7 {
  class User {
    id, email, role, role_confirmed
    avatar, quality_score, tasks_completed
    --
    + set_password(raw)
    + check_password(raw) : bool
    + get_role_display() : str
  }
  class AuthAPI <<APIView>> {
    + register() : {user, tokens}
    + login() : {user, tokens}
    + logout()
    + refresh_token() : str
    + me() : User
    + update_profile() : User
    + change_password()
    + set_role(role) : User
    + list_users(role?, search?) : User[]
    + get_user(id) : User
  }
}

package "project-service :8002" #d8f5e2 {
  class Project {
    id, name, type, status, manager_id
    guidelines, total_images
    annotated_images, approved_images
  }
  class LabelDefinition {
    id, name, color, attributes:JSON
    project : FK→Project
  }
  class ProjectMember {
    id, user_id, role, status
    project : FK→Project
    invited_at, joined_at
  }
  class Dataset {
    id, name, type, status, source
    project : FK→Project
    total_files, total_size_mb, uploaded_by
  }
  class ProjectAPI <<APIView>> {
    + list() / create() : Project
    + retrieve() / update() / destroy() : Project
    + change_status(status) : Project
    + list_labels() / add_label() : Label
    + update_label() / delete_label()
    + list_members() / invite_member(user_id, role)
    + update_member_status(status) / remove_member()
    + list_datasets() / create_dataset() : Dataset
    + update_dataset() / delete_dataset()
    ..internal..
    + internal_get_project() : dict
    + internal_get_labels() : Label[]
    + internal_get_members() : list
    + internal_update_counters()
    + internal_get_dataset() : dict
  }
  Project "1" *-- "*" LabelDefinition
  Project "1" *-- "*" ProjectMember
  Project "1" *-- "*" Dataset
}

package "task-service :8003" #fff3cd {
  class Task {
    id, name, status, priority, deadline
    project_id, annotator_id, reviewer_id
    total_images, completed_images
    quality_score, reject_reason
    --
    + can_transition_to(new_status) : bool
  }
  class TaskStatusHistory {
    id, from_status, to_status
    task : FK→Task
    changed_by, reject_reason, changed_at
  }
  class TaskAPI <<APIView>> {
    + list(project_id?, status?) : Task[]
    + create() : Task
    + retrieve() / update() / destroy() : Task
    + transition_status(status, reason?) : Task
    + get_history() : History[]
    + manager_dashboard(project_id?) : stats
    + annotator_dashboard() : {summary, tasks}
    + reviewer_dashboard() : {summary, tasks}
    ..internal..
    + internal_update_counters(total, completed)
    + internal_get_task() : dict
    + internal_list_project_tasks() : Task[]
  }
  Task "1" *-- "*" TaskStatusHistory
}

package "annotation-service :8004" #fce4ec {
  class ImageFile {
    id, index, file_path, original_filename
    task_id, project_id, dataset_id
    width, height, is_confirmed
    --
    + url : str <<property>>
  }
  class Annotation {
    id, annotation_type, comment
    image : FK→ImageFile
    label_id, label_name, label_color
    x, y, width, height
    points : JSON, created_by
  }
  class AnnotationAPI <<APIView>> {
    + list_images(task_id) : Image[]
    + upload_image(file, task_id) : Image
    + get_image() / delete_image()
    + confirm_image() : Image
    + list_annotations(image_id) : Ann[]
    + create_annotation() : Ann
    + update_annotation() / delete_annotation()
    + bulk_save(annotations[]) : Ann[]
    + task_images_with_annotations(task_id)
    + export(format: coco|yolo|csv) : file
    --
    - _export_coco() : JSON
    - _export_yolo() : JSON
    - _export_csv() : CSV
    ..internal..
    + internal_task_status() : {total, confirmed, %}
    + internal_task_export() : raw_data
  }
  ImageFile "1" *-- "*" Annotation
}

package "notification-service :8005" #ede7f6 {
  class Notification {
    id, type, title, message
    recipient_id, task_id, project_id
    is_read, created_at
  }
  class NotificationAPI <<APIView>> {
    + list(is_read?, type?) : Notif[]
    + unread_count() : int
    + mark_read(pk) : Notif
    + read_all() : {updated: int}
    + delete(pk)
    ..internal..
    + internal_create(recipient_id, type, ...) : Notif
    + internal_bulk_create(notifications[]) : Notif[]
  }
}

User ..> Project : manager_id
User ..> Task : annotator/reviewer_id
Task ..> ImageFile : task_id
Project ..> ImageFile : project_id
Dataset ..> ImageFile : dataset_id
@enduml
